--- a/catangular/views/login.html
+++ b/catangular/views/login.html
@@ -1,13 +1,60 @@
-<div>
-    <form novalidate>
-        Tenant Id: <input type="text" ng-model="creds.tenantId" required/><br />
-        Gateway URL: <input type="url" ng-model="creds.gatewayUrl" required/><br />
-        User Id: <input type="text" ng-model="creds.userId" required/><br />
-        Password: <input type="password" ng-model="creds.password" required/><br />
-        Client Type: <input type="radio" ng-model="creds.clientType" value="LIMITED_ACCESS"/>Limited
-        <input type="radio" ng-model="creds.clientType" value="RICH_CLIENT" />Rich<br />
-        <input type="submit" ng-click="login(creds)" value="Login" />
+
+<div class="jumbotron logintron">
+    <div class="container-fluid">
+        <div class="center-block">
+            <img class="img-responsive center-block" src="img/Catavolt-Logo-retina.png" style="vertical-align: middle;">
+        </div>
+    </div>
+</div>
+
+<div class="container">
+
+    <div class="well">
+    <form class="form-horizontal login-form" novalidate>
+        <div class="form-group">
+            <label for="tenantId" class="col-sm-2 control-label">Tenant Id:</label>
+            <div class="col-sm-10">
+                <input id="tenantId" type="text" class="form-control" ng-model="creds.tenantId" required/>
+            </div>
+        </div>
+        <div class="form-group">
+
+            <label for="gatewayUrl" class="col-sm-2 control-label">Gateway URL:</label>
+            <div class="col-sm-10">
+                <div class="input-group">
+                    <span class="input-group-addon" id="http-addon">http://</span>
+                    <input id="gatewayUrl" type="url" class="form-control" ng-model="creds.gatewayUrl" aria-describedby="http-addon" required/>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="userId" class="col-sm-2 control-label">User Id:</label>
+            <div class="col-sm-10">
+                <input id="userId" type="text" class="form-control" ng-model="creds.userId" required/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="password" class="col-sm-2 control-label"> Password:</label>
+            <div class="col-sm-10">
+                <input id="password" type="password" class="form-control" ng-model="creds.password" required/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="clientType" class="col-sm-2 control-label">Client Type:</label>
+            <div class="col-sm-10">
+                <label class="radio-inline"><input id="clientType" type="radio" ng-model="creds.clientType" value="LIMITED_ACCESS"/>Limited</label>
+                <label class="radio-inline"><input type="radio" ng-model="creds.clientType" value="RICH_CLIENT" />Rich</label>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-10 col-sm-offset-2">
+                <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="login(creds)" value="Login">
+                    Login  <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
+                </button>
+            </div>
+        </div>
     </form>
+    </div>
 
     <p>{{ loginMessage }}</p>
 </div>
