--- a/catangular/views/login.html
+++ b/catangular/views/login.html
@@ -1,5 +1,5 @@
 
-<div class="jumbotron logintron">
+<div class="jumbotron logintron fx-fade-up fx-speed-800" ng-hide="loggedIn">
     <div class="container-fluid">
         <div class="center-block">
             <img class="img-responsive center-block" src="img/Catavolt-Logo-retina.png" style="vertical-align: middle;">
@@ -9,7 +9,7 @@
 
 <div class="container">
 
-    <div class="well">
+    <div class="well fx-fade-down fx-speed-500" ng-hide="loggedIn" >
     <form class="form-horizontal login-form" novalidate>
         <div class="form-group">
             <label for="tenantId" class="col-sm-2 control-label">Tenant Id:</label>
@@ -48,7 +48,7 @@
         </div>
         <div class="form-group">
             <div class="col-sm-10 col-sm-offset-2">
-                <button type="submit" class="btn btn-default btn-primary btn-block" ng-click="login(creds)" value="Login">
+                <button type="submit" class="btn btn-default btn-primary btn-block" ng-disabled="{{loggingIn}}" ng-click="login(creds)" value="Login">
                     Login  <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
                 </button>
             </div>
@@ -56,5 +56,5 @@
     </form>
     </div>
 
-    <h3 class="text-center text-danger">{{ loginMessage }}</h3>
+    <h4 class="text-center text-danger">{{ loginMessage }}</h4>
 </div>
