--- a/catangular/views/login.html
+++ b/catangular/views/login.html
@@ -10,7 +10,7 @@
 <div class="container">
 
     <div class="well fx-fade-down fx-speed-500" ng-hide="loggedIn" >
-    <form class="form-horizontal login-form" novalidate>
+    <form class="form-horizontal login-form">
         <div class="form-group">
             <label for="tenantId" class="col-sm-2 control-label">Tenant Id:</label>
             <div class="col-sm-10">
@@ -23,7 +23,7 @@
             <div class="col-sm-10">
                 <div class="input-group">
                     <span class="input-group-addon" id="http-addon">http://</span>
-                    <input id="gatewayUrl" type="url" class="form-control" ng-model="creds.gatewayUrl" aria-describedby="http-addon" required/>
+                    <input id="gatewayUrl" type="text" class="form-control" ng-model="creds.gatewayUrl" aria-describedby="http-addon" required/>
                 </div>
             </div>
         </div>
