--- a/catangular/views/main.html
+++ b/catangular/views/main.html
@@ -40,8 +40,8 @@
             <div class="row fx-bounce-right fx-speed-500" ng-repeat="action in launchActions track by $index" ng-if="$index%3==0">
 
                 <div class="col-md-4 launch-div" ng-repeat="i in [$index,$index+1,$index+2]" ng-if="launchActions[i]">
-                    <img class="launch-icon img-responsive center-block" ng-src="{{ launchActions[i].iconBase }}"/>
-                    <h5 class="launch-text small text-center">{{ launchActions[i].name }}</h5>
+                    <img class="launch-icon img-responsive center-block" ng-src="{{ launchActions[i].iconBase }}" ng-click="performLaunchAction(launchActions[i])"/>
+                    <h5 class="launch-text small text-center" ng-click="performLaunchAction(launchActions[i])">{{ launchActions[i].name }}</h5>
                 </div>
             </div>
 
