--- a/catreact/css/app.css
+++ b/catreact/css/app.css
@@ -1,7 +1,11 @@
 body {
     padding-top: 0px;
     padding-bottom: 40px;
-    background-color: #fff;
+    background-color: #cccccc;
+}
+
+.header {
+    padding: 50px;
 }
 
 .login-form {
@@ -29,3 +33,44 @@ body {
 .component-chrome {
    background-color: #e9e9e9;
 }
+
+.messageCol {
+    margin: 20px;
+    padding: 10px;
+    background-color: #cccccc;
+}
+
+.messagePanel {
+    margin: 10px;
+    padding: 5px;
+    background-color: #ffffff;
+}
+
+.hlText {
+    color: #b02067;
+}
+
+.hr {
+    height: 1px;
+    background-color: #777777;
+}
+
+.attrib-box {
+    vertical-align: text-bottom;
+}
+
+.like-row {
+    background-color: #4C8C14;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 5px;
+    color: #ffffff;
+    font-size: larger;
+}
+
+.like-row span{
+    margin: 3px;
+    padding-bottom:10px;
+}
+
+
